Bug 65206 - FORMATTING: Highlighted (colored) cells only limited to 32 cells in formula
Summary: FORMATTING: Highlighted (colored) cells only limited to 32 cells in formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other Windows (All)
: high major
Assignee: Kumar Thangavel
URL:
Whiteboard: BSA target:5.2.0
Keywords:
: 69511 97508 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-31 11:41 UTC by chinthaka
Modified: 2022-10-06 11:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
It's jpg file (268.84 KB, image/jpeg)
2013-05-31 11:41 UTC, chinthaka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chinthaka 2013-05-31 11:41:36 UTC
Created attachment 80086 [details]
It's jpg file

Problem description: 

Steps to reproduce:
1. ....
2. ....
3. ....

Current behavior:link Colors are not shown after few raw

Expected behavior: It has to be colored till end of formula


              
Operating System: Windows 7
Version: 4.0.2.2 release
Comment 1 ign_christian 2013-05-31 13:23:28 UTC
reproducible on LO 4.0.4.1 (Win7 32bit)

Only 32 cells colored, 33rd & so on not colored.
Comment 2 ign_christian 2014-07-22 08:49:34 UTC
*** Bug 69511 has been marked as a duplicate of this bug. ***
Comment 3 sotoc79 2015-03-03 18:09:50 UTC
well, where is the solution to this ??
Comment 4 Dennis Francis 2016-01-31 10:39:18 UTC
I'll make an attempt to fix this.
Comment 5 Kumar Thangavel 2016-02-04 07:09:32 UTC
The patch has been submitted for this bug based on discussed with lodevs.
https://gerrit.libreoffice.org/#/c/22094/
Comment 6 raal 2016-02-04 09:23:07 UTC
*** Bug 97508 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2016-02-04 13:55:22 UTC
Kumar Thangavel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6c4b88f5bc4887aa498b2896b1261a4022affca

tdf#65206 Highlighted (colored) references limited to 32 references in formula

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Roeland 2016-09-15 19:12:37 UTC
Hi Kumar, I guess you can put this as fixed? I just closed Bug 90668 which is a duplicate of this bug, so i guess your patch was implemented and works?
Comment 9 kivi 2016-09-16 07:26:28 UTC
Dear Roeland,

It looks like every thing goes well with this bug.
So I thing it may be closed.

With best regards,