tdf#65206 Highlighted (colored) references limited to 32 references in formula

Reviewed-on: https://gerrit.libreoffice.org/22094
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit e6c4b88f5bc4887aa498b2896b1261a4022affca)

Conflicts:
	sc/source/ui/app/inputhdl.cxx

Change-Id: I45731be3d7c3a8ebbafb11d8580294dab01784f4