sc/source/ui/app/inputhdl.cxx
@@ -77,8 +77,8 @@
 #include "markdata.hxx"
 #include "tokenarray.hxx"
 
-//  max. Ranges im RangeFinder
-#define RANGEFIND_MAX   32
+// Maximum Ranges in RangeFinder
+#define RANGEFIND_MAX   64
 
 using namespace formula;
 
